arc/css/style.css
/*
 * Arc - Copyleft of Simone 'evilsocket' Margaritelli.
 * evilsocket at protonmail dot com
 * https://www.evilsocket.net/
 *
 * See LICENSE.
 */
body {
  background-color: #343a40;
}

* {
  box-sizing: border-box;
}

a:hover {
    text-decoration: none;
}

button:hover {
    cursor: pointer;
}

footer {
    color: #ccc;
    bottom: 0;
    width: 100%;
    padding: 10px;
}

footer a {
    color: #888;
}

footer a:hover {
    color: #ccc;
}

.progress {
    background-color: transparent;
}

img.preview-image {
    max-width: 128px;
}

#ptext {
    font-size: 0.8rem;
    margin-bottom: 4px;
    margin-left: 2px;
}

.modal-full {
  width: 100%;
  height: 100%;
  margin: 0;
  bottom: initial !important;
  overflow-y: auto;
}

.modal-dialog-full {
  margin: 0;
  width: 100%;
  max-width: 100%;
  height: 100%;
}

.modal-content-full {
  min-height: 100%;
}

.modal-header-full {
}

.modal-body-full {
  width: 100%;
}

.modal-footer-full {
}

.modal-footer {
    border: none !important;
}

.form-signin {
  max-width: 330px;
  padding: 15px;
  margin: 0 auto;
}
.form-signin .form-signin-heading,
.form-signin .checkbox {
  margin-bottom: 10px;
}
.form-signin .checkbox {
  font-weight: 400;
}
.form-signin .form-control {
  position: relative;
  box-sizing: border-box;
  height: auto;
  padding: 10px;
  font-size: 16px;
}
.form-signin .form-control:focus {
  z-index: 2;
}
.form-signin input[type="email"] {
  margin-bottom: -1px;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}
.form-signin input[type="password"] {
  margin-bottom: 10px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

#session_time_left {
    display:none;
    margin-top: 10px;
    margin-bottom: -10px;
}

.search-form {
    width: 100%;
    margin-bottom:10px;
    margin-top: -10px;
}

.search-filter {
    line-height: 0.9rem;
    font-size: 0.9rem;
    width: 100%;
    border: 0;
}

div.entry-edit {
    float: right; 
    margin-bottom: 5px;
}

div.tb-container {
    padding: 0;
    margin: 0;
}

#toolbar {
    width: 100%;
    margin: 0;
    padding: 0;
} 

#toolbar button {
    background-color: transparent;
}

#toolbar .tb-elem {
    background-color: transparent;
    float: left;
}

#toolbar .tb-updated {
    padding: 5px;
    padding-left: 15px;
}

#secret_expired_at {
    border: 0;
    font-size: 0.9rem;
}

#pruner {
    background-color: transparent;
    font-size: 0.9rem !important;
}

#toolbar button.btn-close {
    background-color: transparent;
    float: right;
}

.action-label {
    color: #aaa;
}

.action-button {
    color: #aaa;
}

.action-button:hover {
    cursor: pointer;
    color: #555;
}

input.ui-checkbox {
    margin-right: 5px;
}

div.entry-edit > a {
    color: #ddd;
    font-size: 1.3rem;
}

div.entry-edit > a:hover {
    color: #aaa;
}

.store-list-item {
    cursor: pointer;
}

.store-media {
    float: left;
    margin-right: 10px;
    color: #ccc;
}

.store-list-item b {
    
}

#secret_title {
    line-height: 35px;
    font-size: 35px;
    padding: 5px;
    width: 100%;
}

.add-secret {
    margin-bottom: 5px;
}

#secret_entry_list {
    width: 100%;
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.secrets-list > li:hover {
    background-color: #eee;
    cursor: pointer;
}

.secrets-list > li.nohover:hover {
    background-color: #fff !important;
    cursor: default !important;
}

.record-status {
    float:right; 
    font-size:11px; 
    text-align:right;
}


.status-expired {
    color: black !important;
}

.status-locked {
    color:#bbb;
}

.status-unlocked {
    /* color: #28a745; */
    color:#bbb;
}

.status-error {
    color: red;
}

.add-entry-row {
    border-top: 1px solid #eee;
    margin-top: 25px;
    padding-top: 25px;
}

input.editable-input {
    display: inline;
    width: auto;
    margin-bottom: 10px;
    line-height: 10px;
}

.md-editor {
    width: 100%;
    overflow: auto;
}

button.btn-password {
    border: 1px solid #ced4da;
}

.pwstrength_viewport_progress {
    margin-top: -10px;
    margin-bottom: 15px;
    font-weight: bold;
    font-size: 3px;
}

#pass_length .slider-selection {
	background: #BABABA;this.id(idx)
}

.slider {
    width: 100% !important;
}

#generated_password {
    margin-top: 20px;
    width: 100%;
    font-size: 10px;
}

.entry-title {
    font-size: 1.2rem;
    font-weight:500;
    font-family: inherit;
}

span.label-4 {
    /* font-weight: bold; */
}

.upload {
    float: left;
    display: inline-block;
    padding: 5px 9px;
    margin-right: 10px;
    font-size: 10px;
    background: #eee;
    border: 1px solid #ccc;
}

input[type=file] {
    display: none;
}

.md-editor > .md-preview {
    padding: 10px;
}

body.dragging, body.dragging * {
    cursor: move !important;
}

.secret-entry-item {
    cursor: grab;
    padding: 5px;
    z-index: 6000;
}

.secret-entry-item:hover {
}

.dragged {
    position: absolute;
    opacity: 0.5;
    z-index: 2000;
}

ul li.placeholder:before {
    position: absolute;
}

#field_selector_body {
    padding: 25px;
}

.field-box {
    width: 100%;
    height: 100%;
    padding: 0;
    margin: 5px;
}

.field-name {
   display: block; 
   font-size: 0.7em;
}

.field-button {
    font-size: 2em;
    width: 100%;
    height: 100%;
}

#templateContainer {
    margin-top: 5px;
    margin-bottom: -10px;
    color: #555;
}

#templateLabel {
    width: 100%;
    font-size: 0.8rem;
}

#template {
    width: 100%;
    font-size: 0.8rem;
}

#loader_modal {
    margin-top: 5%;
}

.loader {
    border: 16px solid #f3f3f3; 
    border-top: 16px solid #3498db; 
    border-radius: 50%;
    width: 120px;
    height: 120px;
    animation: spin 2s linear infinite;
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

#secret_meta {
    margin-left: 7px;
}

